# voicemode

./: CHANGELOG.md  README.md  flake.nix  mkdocs.yml  pyproject.toml  server.json
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/commands/: converse.md
.claude/skills/converse/: SKILL.md
.claude/skills/impressions/: SKILL.md
.claude/skills/impressions/docs/: finding-samples.md
.claude/skills/voicemode/: SKILL.md
.github/workflows/: create-release.yml  deploy-pages.yml  publish-pypi-and-mcp.yml  test.yml
agents/: voice-only.md
docs/guides/: cartesia-setup.md  configuration.md
docs/maintainers/: pr-review-rubric.md
docs/web/: index.html
installer/: pyproject.toml
scripts/: release.py
tests/: test_cartesia_tts.py  test_clone_layout.py  test_conch.py  test_conch_cli.py  test_conch_mcp.py  test_conch_notify.py  test_conch_queue.py  test_configuration_management.py  test_converse_conch_queue.py  test_converse_skip_conch.py  test_default_env_voices.py  test_mlx_audio_install.py  test_release_remote_resolution.py  test_tts_error_handling.py  test_voice_profiles.py
voice_mode/: __version__.py  cartesia_tts.py  cli.py  conch.py  conch_notify.py  conch_ops.py  conch_queue.py  config.py  core.py  dependencies.yaml  provider_discovery.py  simple_failover.py  streaming.py  voice_profiles.py
voice_mode/cli_commands/: conch.py
voice_mode/tools/: conch.py  configuration_management.py  converse.py
voice_mode/tools/impressions/: profiles.py
voice_mode/tools/kokoro/: install.py
voice_mode/tools/mlx_audio/: install.py
voice_mode/tools/whisper/: install.py
